@@ -52,6 +52,7 @@
               Edit Profile
             </a>
             <form method="POST" action="/users/delete">
+              {{ g.csrf_form.hidden_tag() }}
               <button class="btn btn-outline-danger ms-2">
                 Delete Profile
               </button>
@@ -60,10 +61,12 @@
             {% if g.user.is_following(user) %}
             <form method="POST"
                   action="/users/stop-following/{{ user.id }}">
+              {{ g.csrf_form.hidden_tag() }}
               <button class="btn btn-primary">Unfollow</button>
             </form>
             {% else %}
             <form method="POST" action="/users/follow/{{ user.id }}">
+              {{ g.csrf_form.hidden_tag() }}
               <button class="btn btn-outline-primary">Follow</button>
             </form>
             {% endif %}
