@@ -29,6 +29,7 @@
               {% if g.user.is_following(user) %}
               <form method="POST"
                     action="/users/stop-following/{{ user.id }}">
+                {{ g.csrf_form.hidden_tag() }}
                 <button class="btn btn-primary btn-sm">
                   Unfollow
                 </button>
@@ -36,6 +37,7 @@
               {% else %}
               <form method="POST"
                     action="/users/follow/{{ user.id }}">
+                {{ g.csrf_form.hidden_tag() }}
                 <button class="btn btn-outline-primary btn-sm">
                   Follow
                 </button>
